--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 Hello World
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="IAMANNNGUYEN, One Page RESUME">
+  <meta name="keywords" content="onepage, resume, CV HTML template, personal Vcard, html resume, free resume template, free HTML template, free bootstrap template, personal portfolio, free html portfolio">
+	<meta name="author" content="http://trendytheme.net/">
+
+	<title>IAMANNNGUYEN</title>
